2011-11-24   Jan Nijtmans <nijtmans@users.sourceforge.net>

	* generic/tclThread.h:    Only export Thread_Init(), nothing more.
	* generic/tclXkeylist.h
	* generic/threadSpCmd.h
	* generic/threadSvCmd.h
	* generic/threadSvCmd.c
	* generic/threadSvKeylistCmd.h
	* generic/threadSvListCmd.h

2011-11-20  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: Correct check for current thread in the
	ThreadReserve function [Bug 3411244].  Correct the order for releasing
	the interpreter and freeing memory, see check-in [6067508840].

2011-11-17  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: Refactor ThreadEventProc to make sure all paths
	out of the function call Tcl_Release on the necessary Tcl interpreters.
	Also, call ThreadErrorProc consistently whenever the return code is not
	TCL_OK (i.e. do not check for it to be equal to TCL_ERROR).

2011-11-17  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: The [thread::wait] command should use the
	TCL_CANCEL_UNWIND flag when calling Tcl_Canceled because it manages its
	own event processing loop.  Also, if the event processing loop is
	terminated due to a script in progress being canceled or exceeding a
	runtime limit, the registered error script should be evaluated, if any.

2011-11-17  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: The [thread::wait] command must cooperate with
	the interpreter resource limiting (TIP #143) and asynchronous script
	cancellation (TIP #285) functionality, when available.

2011-11-17  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: For [thread::cancel], avoid creating a new
	Tcl_Obj when the default script cancellation result is desired.

	* doc/thread.man: Update all remaining versions to 2.7b1.
	* doc/tpool.man:
	* doc/tsv.man:
	* doc/ttrace.man:
	* lib/ttrace.tcl:
	* win/vc/pkg.vc:
	* win/vc/thread_win.dsp:

	* win/vc/makefile.vc: Stop using -debug:full as it causes an error
	with the MSVC10 compiler.
